update image names and log file names

--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -5,9 +5,9 @@ filebeat:
         message_key: message
         keys_under_root: true
       paths:
-        - /var/log/ads/app.log
-        - /var/log/auth/app.log
-        - /var/log/geocoder/app.log
+        - /var/log/ads/development.log
+        - /var/log/auth/development.log
+        - /var/log/geocoder/development.log
 setup:
   kibana:
     host: "http://kibana:5601"
