--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - rabbitmq:/var/lib/rabbitmq
   filebeat:
-    image: docker.elastic.co/beats/filebeat-oss:7.8.0
+    image: jiapinai/docker.elastic.co.beats.filebeat-oss:7.7.1
     container_name: filebeat
     depends_on:
       - elasticsearch
@@ -22,13 +22,13 @@ services:
       - /home/itarchitect/Work/Ruby/auth_microservice/log/:/var/log/auth:ro
       - /home/itarchitect/Work/Ruby/geocoder_microservice/log/:/var/log/geocoder:ro
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.8.0
+    image: zhangguanzhang/docker.elastic.co.elasticsearch.elasticsearch-oss:7.7.1
     container_name: elasticsearch
     volumes:
       - elasticsearch:/usr/share/elasticsearch/data
       - ./elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
   kibana:
-    image: docker.elastic.co/kibana/kibana-oss:7.8.0
+    image: zhangguanzhang/docker.elastic.co.kibana.kibana-oss:7.7.1
     container_name: kibana
     depends_on:
       - elasticsearch
